Removed dependency on nesta shim, cleaned up layouts.

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -1,36 +1,28 @@
-<a name="top"></a>
-<header>
-  <div class="menu-wrap">
-    <ul class="menu">
-    == menu_tag_current 'current','li' do
-      <li>
-        <a href="/">home</a>
-      </li>
-      <li>
-        <a href="/download">download</a>
-      </li>
-      <li>
-        <a href="/plugins">Plugins</a>
-      </li>
-      <li>
-        <a href="/docs">Docs</a>
-      </li>
-      <li>
-        <a href="/support">Support</a>
-      </li>
-      <li>
-        <a href="/licenses">Licenses</a>
-      </li>
-    </ul>
-    
-      
-  </div>
-    <h1><a href="/" title="">Image<span style="display:none"> </span>Resizer <span style="display:none">- </span><span class="tech">the IIS/ASP.NET module for everyone </span></a></h1>
+a name="top"
+header
+  .menu-wrap
+    ul.menu
+      == menu_tag_current 'current','li' do
+        li
+          a href="/" Home 
+        li
+          a href="/download" download
+        li
+          a href="/plugins" Plugins
+        li
+          a href="/docs" Docs
+        li
+          a href="/support" Support
+        li
+          a href="/licenses" Licenses
 
-    <div class="site-subheader">
-      <p class="slogan">
-        Resize, watermark, crop, rotate and filter from the image URL. <br />
-        Usable from javascript, css, html, php, ruby, python, asp, asp.net, anything!
-      </p>
-    </div>
-</header>
+  h1
+    a href="/" title=""
+      | Image<span style="display:none"> </span>Resizer <span style="display:none">- </span>
+      span.tech the IIS/ASP.NET module for everyone
+
+  .site-subheader
+    p.slogan
+      | Resize, watermark, crop, rotate and filter from the image URL. <br />
+      | Usable from javascript, css, html, php, ruby, python, asp, asp.net, anything!
+
