--- a/content/_layout/plugin_page.slim
+++ b/content/_layout/plugin_page.slim
@@ -33,5 +33,5 @@ Layout: layout
     == yield
     -if page.lib?('plusone')
       <div class="g-plusone"></div>
-    div(style="clear:both;")
+    div style="clear:both;"
   ==partial :comments
