Restored missing heading on all pages

--- a/content/_layout/buy_page.slim
+++ b/content/_layout/buy_page.slim
@@ -27,5 +27,7 @@ Layout: layout
       <br /> Processed by PayPal or Google Checkout
       </div>
     </div>
-  
+  - if page.heading
+    h1.page-header
+      == page.heading
   == yield
