--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -10,7 +10,9 @@ Layout: layout
     - if page.lib?('plusone')
       div style="width:70px;padding-top:25px;float:right"
         .g-plusone
-  
+    - if page.heading
+      h1.page-header
+        == page.heading
     == yield
 
   - if page.lib?('plusone')
