Added beta version of /buy page

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -8,7 +8,7 @@ header
         li
           a href="/download" download
         li
-          a href="/plugins" Plugins
+          a href="/buy" Prices
         li
           a href="/docs" Docs
         li
