Fixed 2 remaining .metadata references

--- a/content/_layout/release.slim
+++ b/content/_layout/release.slim
@@ -7,8 +7,8 @@ Layout: layout
 				.g-plusone
 		h1 =page.heading
 
-		a href=page.metadata.fullfile class="awesome green" Download source, binaries, plugins, and sample code (15MB)
-		a href=page.metadata.minfile class="awesome black" Download core binary only (170K)
+		a href=page.meta.fullfile class="awesome green" Download source, binaries, plugins, and sample code (15MB)
+		a href=page.meta.minfile class="awesome black" Download core binary only (170K)
 
 		== yield
 		
