Changed 'Prices' to 'Buy Plugins' in menu

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -8,7 +8,7 @@ header
         li
           a href="/download" download
         li
-          a href="/buy" Prices
+          a href="/buy" Buy Plugins
         li
           a href="/docs" Docs
         li
