--- a/content/_layout/release.slim
+++ b/content/_layout/release.slim
@@ -1,21 +1,8 @@
-Layout: layout
+Layout: page
 
-.page-content.no-banner
-	.t
-		- if page.lib?("plusone")
-			div style="width:70px;padding-top:25px;float:right"
-				.g-plusone
-		h1 =page.heading
+a href=page.metadata.fullfile class="awesome green" Download source, binaries, plugins, and sample code (15MB)
+a href=page.metadata.minfile class="awesome black" Download core binary only (170K)
 
-		a href=page.metadata.fullfile class="awesome green" Download source, binaries, plugins, and sample code (15MB)
-		a href=page.metadata.minfile class="awesome black" Download core binary only (170K)
+== yield
 
-		== yield
-		
-		- if page.lib?("plusone")
-			.g-plusone
-
-	== partial :comments
-	
-	
 
