--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -25,9 +25,9 @@ html(lang="en" class="no-js")
     link rel="stylesheet" href="/css/3-banners.css?v=2" 
     link rel="stylesheet" href="/css/main.css?v=2" 
     link rel="stylesheet" href="/js/highlight/styles/vs.css" 
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    /[if lt IE 9]
+      script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
+
     - if page.lib?("jqueryui")
       link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.16.custom.css"
     - if page.lib?("jqueryui")
