Fixed grevious error in main layout - was missing 'body' tag

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -37,7 +37,7 @@ html(lang="en" class="no-js")
 
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
     == partial :analytics
-
+  body
     .site-container
       == partial :header
       .main
