Added pricing-2013 post, updated /buy and /plugins to use the new product codes

--- a/content/buy.slim
+++ b/content/buy.slim
@@ -1,10 +1,13 @@
 Layout: layout
 Libs: pricer, -comments, ejunkie, ejunkiecart, uservoice
 Heading: Choose your edition
+Aliases: /pricing /prices
 
 .buy-page style="position:relative"
   span style="position:absolute; top:0px; right:0px;" 
-    | <a href="#" onClick="javascript:return EJEJC_lc(this);">View shopping cart</a>
+    <a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" onClick="javascript:return EJEJC_lc(this);">View shopping cart</a>
+  span style="position:absolute; top:0px; left:0px;"
+    a href="/plugins" View full plugin list
   h1 Choose Your Edition
   p.fineprint
     | All editions include modifiable source code. 100% satisfaction guarantee, <a href="/purchase/refunds">or your money back</a>. All major credit cards accepted.
