Completed Domain license and added links to it.

--- a/content/buy.slim
+++ b/content/buy.slim
@@ -72,6 +72,7 @@ Aliases: /pricing /prices
               span
               | A floating license can be used on several different domains - but not at the same time.
               p A wildcard domain, such as *.example.com, allows you to use the software on multiple subdomains without extra fees. *.example.com would allow the software to run on 'img.example.com' and 'www.example.com' at the same time.
+              p See licenses -> Resizer Domain License for details
             | Floating wildcard domain license.
       .signup
         form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1197635&amp;cl=41912&amp;ejc=2&amp;o1=Performance%20Edition%20(1%20domain)" target="ej_ejc" method="POST" accept-charset="UTF-8"
