--- a/content/plugins/editions/creative.slim
+++ b/content/plugins/editions/creative.slim
@@ -15,7 +15,7 @@ markdown:
   - Overlay (or underlay) multiple text and image layers with the Watermark plugin - anything is possible.
   - Auto-trim your product photos with WhitespaceTrimmer, or use SeamCarving to magically change the aspect ratio of images by slicing seams of pixels from background (low-energy) areas of the image.
 
-  When purchased as the Creative Edition, you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
+  When purchased as the Creative Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
   If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
 
 == partial :my_plugins, options
