--- a/content/plugins/editions/performance.slim
+++ b/content/plugins/editions/performance.slim
@@ -11,7 +11,7 @@ h1 Performance Edition
 markdown: 
   This bundle gives you scalable performance, high-quality GIF, animated GIF, and 8-bit PNG support. 
 
-  When purchased as the Performance Edition, you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
+  When purchased as the Performance Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
   If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
 
 == partial :my_plugins, options
