Renamed 'Free Editon' to 'Essential Edition', made wording changes.

--- a/content/buy.slim
+++ b/content/buy.slim
@@ -14,12 +14,10 @@ Aliases: /pricing /prices
   .pricer.p5cols
     .col.grey
       .header
-        .product Free
+        .product Essential
         .price
-          span $
-          | 0
-          span 00
-        .payment and open-source
+          | free
+        .payment open-source
       .details
         ul
           li.tooltop-container
@@ -40,6 +38,8 @@ Aliases: /pricing /prices
         a href="/download"
           span
           | Download Now
+      .signup
+        a href="/plugins/editions/free" Details
     .col.green
       .header
         .product Performance
@@ -48,7 +48,6 @@ Aliases: /pricing /prices
           | 249
           span 00
         .payment per domain
-        .label Most popular
       .details
         ul
           li
@@ -89,6 +88,7 @@ Aliases: /pricing /prices
           | 499
           span 00
         .payment per domain
+        .label Most popular
       .details
         ul
           li 
@@ -116,7 +116,7 @@ Aliases: /pricing /prices
         .payment 
           | per 
           strong enterprise
-        .label Best value
+        .label All-inclusive
       .details
         ul
           li 
@@ -143,13 +143,13 @@ Aliases: /pricing /prices
         .payment 
           | per 
           strong enterprise
-        .label Includes support
+        .label Best Value
       .details
         ul
           li 
             strong Everything from Elite, plus:
           li 6 months of free major version upgrades
-          li 30 minute avg. response time during business hours.
+          li Same business day priority support
           li Best-effort hotfix delivery
           li 1 support incident per month
           li 1 free assisted installation
