--- a/content/plugins/editions/free.slim
+++ b/content/plugins/editions/free.slim
@@ -4,12 +4,13 @@ Cost: The Performance edition costs $249 per domain
 Suffix: Th
 sort_field: 5
 Layout: plugin_page
+Aliases: /plugins/editions/essential
 
-h1 Free edition
+h1 Essential edition
 
 markdown:
 
-  Except for PdfRenderer, which is [under a different license](/licenses/pdfrenderer) due to its use of GPL components, all of the plugins in this bundler are released under the [Freedom license](/licenses/freedom).
+  Except for PdfRenderer, which is [under a different license](/licenses/pdfrenderer) due to its use of GPL components, all of the plugins in this edition are released under the [Freedom license](/licenses/freedom).
 
   Everything here can be found in the [free download](/download).
 
