Removed links to 'open letter', improvde wording on pricing-2013 page.

--- a/content/buy.slim
+++ b/content/buy.slim
@@ -155,7 +155,7 @@ Aliases: /pricing /prices
           li 1 free assisted installation
           li 30 minute free consultation with author
           li 1 hour coding assistance
-          li Limited to 1 designated employee
+          li Support is limited to 1 designated employee
       .signup
         a href="/support/contracts"
           span
