Added mention of FluentAPI and ResponsivePresets on the home page

--- a/content/index.slim
+++ b/content/index.slim
@@ -65,7 +65,10 @@ markdown:
 
 	7. Ready to go live? Get the [Performance Edition](/plugins/editions/performance), which includes [disk caching](/plugins/diskcache) and several other invaluable plugins. This project requires my full-time attention (and part-time help from others), so please support it by purchasing [a paid edition](/buy) or [an all-inclusive support contract](/support/contracts). 
 
-	8. Go high-level with [wrappers](/docs/wrappers). Wrap the URL API in a [jQuery studio plugin](https://github.com/nathanaeljones/studiojs) or an [ASP.NET cropping control](http://webcropimage.com).
+	8. Add [third-pary plugins](/docs/wrappers) and contribute your own:
+		* Use [Ben Foster's Fluent API](https://github.com/benfoster/ImageResizer.FluentExtensions) instead of building query strings with the `Instructions` class
+		* Want a UI for ImageResizer? [Try StudioJS](https://github.com/nathanaeljones/studiojs)
+		* Responsive web design requires responsive images. [Check out the ResponsivePresets system](https://github.com/mindrevolution/ImageResizer-ResponsivePresets) from [marc303](https://github.com/marc303).
 
 	Can't afford any mistakes? Ensure your content architecture is scalable and secure by having a **30-minute Q&A session with the author for just $70**.
 	Add aided installation of 1 server or workstation for +$60, or 2 servers or workstations for +$120. [Find out more](/support/consult). Or, get [a support contract](/support/contracts) that includes all of the above *and* licenses for everything. 
