--- a/content/css/bootstrap/bootstrap.scss
+++ b/content/css/bootstrap/bootstrap.scss
@@ -27,7 +27,7 @@
 @import "tables";
 
 // Components: common
-@import "sprites";
+@import "../font/font-awesome";
 @import "dropdowns";
 @import "wells";
 @import "component-animations";
