--- a/content/_layout/release.slim
+++ b/content/_layout/release.slim
@@ -1,7 +1,8 @@
 Layout: page
 
-a href=page.meta.fullfile class="awesome green" Download source, binaries, plugins, and sample code (15MB)
-a href=page.meta.minfile class="awesome black" Download core binary only (170K)
+a href=page.meta.fullfile class="btn btn-primary" Download source, binaries, plugins, and sample code (15MB)
+|  or 
+a href=page.meta.minfile class="btn" Download core binary only (170K)
 
 == yield
 
