--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -1,8 +1,9 @@
 Flags: visible
 Layout: false
 
-footer
-  | Copyright 2013 
-  a href="http://imazen.io" style="color:white" Imazen LLC 
-  | &amp; 
-  a href="http://nathanaeljones.com" style="color:white" Nathanael Jones 
+footer.footer
+  .container      
+    | Copyright 2013 
+    a href="http://imazen.io" Imazen LLC 
+    | &amp; 
+    a href="http://nathanaeljones.com" Nathanael Jones 
