--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -19,39 +19,35 @@ html(lang="en" class="no-js")
       = page.title
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
      
-    
-    link rel="stylesheet" href="/css/1-reset.css?v=2" 
-    link rel="stylesheet" href="/css/2-site.css?v=2" 
-    link rel="stylesheet" href="/css/3-banners.css?v=2" 
-    link rel="stylesheet" href="/css/main.css?v=2" 
-    link rel="stylesheet" href="/js/highlight/styles/vs.css" 
-    /[if lt IE 9]
-      script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
 
-    - if page.lib?("jqueryui")
-      link rel="stylesheet" href="/css/smoothness/jquery-ui-1.8.16.custom.css"
-    - if page.lib?("jqueryui")
-      link rel="stylesheet" href="/css/jquery.Jcrop.css"
+    link href="/css/site.css" rel="stylesheet"
+    
+    /[if lt IE 9]
+      script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"
+
     - if page.lib? :pricer
       link rel="stylesheet" href="/css/pricer.css"
 
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
     == partial :analytics
   body
-    .site-container
-      == partial :header
-      .main
-        == yield
-      == partial :footer
+    == partial :header
+    .container
+      == yield
+    == partial :footer
 
     == partial :search
 
 
-    script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
+    script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"
     javascript:
-      !window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.6.2.min.js"%3E%3C/script%3E'))//'
+      !window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.9.0.min.js"%3E%3C/script%3E'))//'
+
+
+    script src="/js/bootstrap.min.js"
 
     script src="/js/jquery.tools.min.js"
+
 
     script src="/js/highlight/highlight.pack.js"
 
@@ -60,12 +56,6 @@ html(lang="en" class="no-js")
 
     - if page.lib?("jtools")
       script src="http://cdn.jquerytools.org/1.2.6/tiny/jquery.tools.min.js"
-
-    - if page.lib?("jqueryui")
-      script src="/js/jquery-ui-1.8.16.custom.min.js"
-
-    - if page.lib?("jcrop")
-      script src="/js/jquery.Jcrop.min.js"
 
     - if page.lib?("tinybox")
       script src="/js/tinybox.js"
@@ -83,7 +73,6 @@ html(lang="en" class="no-js")
 
     - if page.lib?("ejunkie")
       script src='http://www.e-junkie.com/ecom/box.js' 
-
 
     - if page.lib?("plusone")
       / Place this tag in your head or just before your close body tag 
