Renamed bootstrap include list file, moved variables to root.

--- a/content/css/bootstrap/bootstrap-custom.scss
+++ b/content/css/bootstrap/bootstrap-custom.scss
@@ -9,7 +9,7 @@
  */
 
 // Core variables and mixins
-@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "../variables"; // Modify this for custom colors, font-sizes, etc
 @import "mixins";
 
 // CSS Reset
