--- a/content/css/bootstrap/responsive-custom.scss
+++ b/content/css/bootstrap/responsive-custom.scss
@@ -27,7 +27,7 @@
 // -------------------------
 // Required since we compile the responsive stuff separately
 
-@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "../variables"; // Modify this for custom colors, font-sizes, etc
 @import "mixins";
 
 
