--- a/content/css/site.scss
+++ b/content/css/site.scss
@@ -1,6 +1,6 @@
 
-@import "bootstrap/bootstrap";
-@import "bootstrap/responsive";
+@import "bootstrap/bootstrap-custom";
+@import "bootstrap/responsive-custom";
 
 @import "highlight/styles/vs.css";
 
