--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -6,7 +6,8 @@ Layout: headless_page
 - if page.meta.warning
   .warning-message = page.meta.warning
 
-- if page.heading
-  h1.page-header
-    == page.heading
-== yield
+section
+  == yield
+
+
+== partial :heading_banner
